--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "sequelize": "^6.37.7",
-    "sqlite": "^5.1.1"
+    "sqlite": "^5.1.1",
+    "winston": "^3.17.0"
   }
 }
